// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render as h1 element 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  font-size: 24px;
  line-height: 32px;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 28px;
    line-height: 32px;
  }
}

<h1
  class="circuit-0"
>
  h1 heading
</h1>
`;

exports[`Heading should render as h2 element 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  font-size: 24px;
  line-height: 32px;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 28px;
    line-height: 32px;
  }
}

<h2
  class="circuit-0"
>
  h2 heading
</h2>
`;

exports[`Heading should render as h3 element 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  font-size: 24px;
  line-height: 32px;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 28px;
    line-height: 32px;
  }
}

<h3
  class="circuit-0"
>
  h3 heading
</h3>
`;

exports[`Heading should render as h4 element 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  font-size: 24px;
  line-height: 32px;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 28px;
    line-height: 32px;
  }
}

<h4
  class="circuit-0"
>
  h4 heading
</h4>
`;

exports[`Heading should render as h5 element 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  font-size: 24px;
  line-height: 32px;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 28px;
    line-height: 32px;
  }
}

<h5
  class="circuit-0"
>
  h5 heading
</h5>
`;

exports[`Heading should render as h6 element 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  font-size: 24px;
  line-height: 32px;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 28px;
    line-height: 32px;
  }
}

<h6
  class="circuit-0"
>
  h6 heading
</h6>
`;

exports[`Heading should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  font-size: 24px;
  line-height: 32px;
  margin-bottom: 0;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 28px;
    line-height: 32px;
  }
}

<h2
  class="circuit-0"
/>
`;

exports[`Heading should render with size exa 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  font-size: 28px;
  line-height: 32px;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 36px;
    line-height: 44px;
  }
}

<h2
  class="circuit-0"
>
  exa heading
</h2>
`;

exports[`Heading should render with size giga 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  font-size: 19px;
  line-height: 24px;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 22px;
    line-height: 24px;
  }
}

<h2
  class="circuit-0"
>
  giga heading
</h2>
`;

exports[`Heading should render with size kilo 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  font-size: 17px;
  line-height: 24px;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 17px;
    line-height: 24px;
  }
}

<h2
  class="circuit-0"
>
  kilo heading
</h2>
`;

exports[`Heading should render with size mega 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  font-size: 19px;
  line-height: 24px;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 19px;
    line-height: 24px;
  }
}

<h2
  class="circuit-0"
>
  mega heading
</h2>
`;

exports[`Heading should render with size peta 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  font-size: 24px;
  line-height: 32px;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 28px;
    line-height: 32px;
  }
}

<h2
  class="circuit-0"
>
  peta heading
</h2>
`;

exports[`Heading should render with size tera 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  font-size: 22px;
  line-height: 24px;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 24px;
    line-height: 32px;
  }
}

<h2
  class="circuit-0"
>
  tera heading
</h2>
`;

exports[`Heading should render with size zetta 1`] = `
.circuit-0 {
  font-weight: 700;
  margin-bottom: 24px;
  color: #000;
  font-size: 28px;
  line-height: 32px;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 42px;
    line-height: 48px;
  }
}

<h2
  class="circuit-0"
>
  zetta heading
</h2>
`;
